# backend/travel-with-anna/src/main/java/com/andwis/travel_with_anna/user/admin/UserAdminDeleteRequest.java
@@ -1,0 +1,4 @@
+package com.andwis.travel_with_anna.user.admin;
+
+public record UserAdminDeleteRequest(Long userId, String password) {
+}
