# backend/travel-with-anna/src/main/java/com/andwis/travel_with_anna/user/admin/UserAdminUpdateRequest.java
@@ -1,0 +1,12 @@
+package com.andwis.travel_with_anna.user.admin;
+
+import lombok.*;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class UserAdminUpdateRequest {
+    private UserAdminEdit userAdminEdit;
+    private String password;
+}
